# fineract-aml

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_ip_tracking_and_configurable_currency.py  003_add_credit_scoring_tables.py  004_add_sanctions_ctr_audit_and_explainability.py  005_add_customer_kyc_table.py  006_add_actor_context_and_data_quality.py  007_add_agent_profiles_and_loan_watches.py  008_add_credit_request_fields_and_case_sar.py  009_add_model_health_snapshots.py  010_add_adverse_media_results.py  011_rbac_audit_ctr_fields.py
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  cases.py  credit.py  ctrs.py  eligibility.py  graph.py  model_health.py  scoring.py  transactions.py  webhook.py
backend/app/core/: config.py  database.py  metrics.py  security.py
backend/app/features/: credit_extractor.py  extractor.py
backend/app/ml/: anomaly_detector.py  credit_scorer.py  drift_detector.py  fraud_classifier.py  graph_analyzer.py  shadow_scorer.py
backend/docs/: credit-scoring-api.md  credit-scoring-architecture.md  credit-scoring-operations.md
backend/scripts/: generate_training_data.py
backend/tests/: conftest.py  test_agent_rules.py  test_anomaly_detector.py  test_credit_features.py  test_credit_gaming.py  test_credit_scorer.py  test_data_quality.py  test_escalation.py  test_features.py  test_loan_monitoring.py  test_rules.py  test_webhook_api.py
(+130 files in other folders)
