[project]
name = "fineract-aml"
version = "0.1.0"
description = "Anti-Money Laundering detection service for Apache Fineract"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/*", "app/core/config.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
